# dict-diff

./: .gitignore  CODE_OF_CONDUCT.md  LICENSE  README.md  dict_diff.py  profile_dict_diff.py  pytest.ini  setup.cfg  test_dict_diff.py
.github/workflows/: python-app.yml
dict_diff/: __init__.py  dict_diff.py
dictionary_diff/: __init__.py  change.py  dict_diff.py  diff.py  list_diff.py
docs/: conf.py  index.rst
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
tests/: __init__.py  profile_dict_diff.py  test_dict_diff.py
