[metadata]
name = dictionary-diff
version = 0.0.2
author = Jan Lukas
author_email = jan@garloff.de
description = Get and apply diffs of python dictionaries
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/JanLukasGithub/dict-diff
project_urls =
    Bug Tracker = https://github.com/JanLukasGithub/dict-diff/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = .
packages = find:
python_requires = >=3.8

[options.packages.find]
where = .